Fixed wrapping issue on About Page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,16 +72,16 @@ hr {
 } 
 
 .image{
-    margin-left:30px;
-    margin-top:5px;
-    width: 100%;
-    height: auto;
-    max-width:85%;
+    margin-left:45px;
+    margin-top:10px;
+    height:175px;
+    width:225px;
+    padding-right:20px;
 }
 
 .bioTop{
-    padding:0px 30px;
-    padding-top:5px;
+    margin-left:45px;
+    margin-right:30px;
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height:30px;
     color:gray;
@@ -89,7 +89,7 @@ hr {
 }
 
 .bioMiddle {
-    padding-left:30px; 
+    margin-left:45px;
     padding-right:30px; 
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height:30px;
@@ -98,7 +98,7 @@ hr {
 }
 
 .bioBottom {
-    padding-left:30px; 
+    margin-left:45px;
     padding-right:30px; 
     padding-bottom:20px;
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
